--- a/redball01.html
+++ b/redball01.html
@@ -192,11 +192,11 @@ redball.left= redball.left +5;
 <button onclick="movedown();">Move Down</button>
 <button onclick="moveright();">Move Right</button>
 <button onclick="moveleft();">Move Left</button>
-<button onclick="movesquare();">Move Square</button>
 <button onclick="movediagonalright();">Move Diagonal Down Right</button>
 <button onclick="movediagonalleft();">Move Diagonal Down Left</button>
 <button onclick="movetriangle();">Move Triangle</button>
-
+<button onclick="moverectangle();">Move Rectangle</button>
+<button onclick="movesquare();">Move Square</button>
 <img src="redball.jpg" id="redball" width="150px" height="200px"/>
 
 </body>
